# claude-code-free

./: .env.example  .gitignore  AGENTS.md  BASE_URL_AUDIT.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Free_Claude_Code_Rollback_Guide.docx  Free_Claude_Code_Setup_Guide.docx  INICIAR_CLAUDE_GRATIS.bat  PROJECT.md  README-TR.md  README.md  SECURITY.md  TODO.md  ZSHRC-ALIASES.md  check_settings.py  claude-pick  claude-switch.sh  crear_acceso_directo.ps1  fix_quotes.py  install.sh  justfile  models_comparison.md  nvidia_nim_models.json  opencode_go_models.json  pyproject.toml  server.py  sitecustomize.py  test_metrics.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  dependabot-automerge.yml  tests.yml
api/: __init__.py  app.py  auto_router.py  command_utils.py  dependencies.py  fallback.py  health.py  model_router.py  routes.py  runtime.py  services.py
api/models/: anthropic.py
cli/: entrypoints.py  session.py
config/: __init__.py  env.example  logging_config.py  nim.py  provider_catalog.py  provider_ids.py  settings.py
core/: compatibility.py  context_manager.py  metrics.py  model_catalog.py  query_classifier.py  typing_compat.py
core/anthropic/: conversion.py  sse.py  tools.py
messaging/: commands.py  handler.py  session.py  transcript.py  transcription.py
messaging/rendering/: discord_markdown.py  telegram_markdown.py
messaging/trees/: queue_manager.py
providers/: __init__.py  base.py  defaults.py  exceptions.py  openai_compat.py  rate_limit.py  registry.py
providers/agent_router/: __init__.py  client.py
providers/ai21/: __init__.py  client.py  request.py
providers/anthropic/: __init__.py  client.py  request.py
providers/anyscale/: __init__.py  client.py  request.py
providers/cerebras/: __init__.py  client.py  request.py
providers/cloudflare/: __init__.py  client.py  request.py
providers/codex_cli/: client.py  (+3 more)
test/: Dockerfile  docker-entrypoint.sh
tests/: conftest.py  test_openrouter.py
(+133 files in other folders)
