[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "free-claude-code"
version = "2.1.0"
description = "Middleware between Claude Code CLI (Anthropic API) and NVIDIA NIM"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    "fastapi>=0.110,<0.112",
    "uvicorn[standard]>=0.29,<0.31",
    "httpx[socks]>=0.27,<0.29",
    "aiohttp>=3.9,<4.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "python-dotenv>=1.0,<2.0",
    "tiktoken>=0.7,<1.0",
    "openai>=1.30,<2.0",
    "loguru>=0.7,<1.0",
    "markdown-it-py>=3.0,<4.0",
    "python-telegram-bot>=21,<23",
    "discord.py>=2.3,<3.0",
]

[project.scripts]
free-claude-code = "cli.entrypoints:serve"
fcc-init = "cli.entrypoints:init"

[project.optional-dependencies]
voice = [
    "grpcio>=1.60,<2.0",
    "grpcio-tools>=1.60,<2.0",
    "nvidia-riva-client>=2.25,<3.0",
]
voice_local = [
    "torch>=2.1,<3.0",
    "transformers>=4.40,<5.0",
    "accelerate>=0.30,<1.0",
    "librosa>=0.10,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["api", "cli", "config", "core", "messaging", "providers"]

[tool.uv]
resolution = "highest"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E","W","F","I","UP","B","C4","SIM","PERF","RUF"]
ignore = ["E501","B008","RUF006"]

[tool.ruff.lint.isort]
known-first-party = ["api", "cli", "config", "core", "messaging", "providers"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-n auto"
testpaths = ["tests"]

[tool.ty.environment]
python-version = "3.11"

[tool.ty.analysis]
allowed-unresolved-imports = ["torch", "transformers", "librosa", "riva.client"]

[dependency-groups]
dev = [
    "pytest>=7.4,<9.0",
    "pytest-asyncio>=0.23,<2.0",
    "pytest-cov>=4.0,<8.0",
    "pytest-xdist>=3.5,<4.0",
    "ruff>=0.4,<1.0",
]
